add page content to index.hmtl

--- a/index.html
+++ b/index.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | NFT preview card component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <body class="container">
+    <main class="modal">
+      <img
+        src="./images/image-equilibrium.jpg"
+        class="modal_img"
+        alt="A glass cube floating above a surface, with red light glowing at certain points."
+      />
+      <section class="modal_content">
+        <h1 class="modal_title">Equilibrium #3429</h1>
+        <p class="modal_text">
+          Our Equilibrium collection promotes balance and calm.
+        </p>
+        <div class="modal_info">
+          <p class="modal_price">
+            <img
+              class="modal_price_ethereum"
+              src="./images/icon-ethereum.svg"
+              alt="icon of diamond"
+            />
+            0.041 ETH
+          </p>
+          <p class="modal_time">
+            <img
+              class="modal_price_clock"
+              src="./images/icon-clock.svg"
+              alt="icon of diamond"
+            />
+            3 days left
+          </p>
+          <p></p>
+        </div>
+        <p class="modal_author">
+          <img
+            class="modal_price_clock"
+            src="./images/image-avatar.png"
+            alt="icon of diamond"
+          />
+        </p>
+        Creation of <strong class="modal_author_name">Jules Wyvern</strong>
+      </section>
+    </main>
+  </body>
 </html>
