add styles for mobile design

--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@
             />
             3 days left
           </p>
-          <p></p>
         </div>
         <p class="modal_author">
           <img
-            class="modal_price_clock"
+            class="modal_author_avatar"
             src="./images/image-avatar.png"
             alt="icon of diamond"
           />
+          Creation of <span class="modal_author_name">Jules Wyvern</span>
         </p>
-        Creation of <strong class="modal_author_name">Jules Wyvern</strong>
       </section>
     </main>
   </body>
