add hover effects

--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
   </head>
   <body class="container">
     <main class="modal">
-      <img
-        src="./images/image-equilibrium.jpg"
-        class="modal_img"
-        alt="A glass cube floating above a surface, with red light glowing at certain points."
-      />
+      <div class="modal_layer">
+        <img
+          src="./images/image-equilibrium.jpg"
+          class="modal_img"
+          alt="A glass cube floating above a surface, with red light glowing at certain points."
+        />
+        <img
+          class="modal_eye_icon"
+          src="./images/icon-view.svg"
+          alt="icon of eye"
+        />
+      </div>
       <section class="modal_content">
         <h1 class="modal_title">Equilibrium #3429</h1>
         <p class="modal_text">
