--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="main.css" rel="stylesheet" />
+    <link href="./css/main.css" rel="stylesheet" />
   </head>
   <body class="container">
     <main class="modal">
